fix the extra space below the video stream

--- a/app/assets/stylesheets/views/cameras/single/_streams.scss
+++ b/app/assets/stylesheets/views/cameras/single/_streams.scss
@@ -34,5 +34,6 @@
 // }
 
 .video-js {
-  padding-top: 52%;
+  padding-top: 51.20%;
+  margin-bottom: 0px;
 }
